--- a/lwc1hr/force-app/main/default/lwc/todoItemComponent/todoItemComponent.html
+++ b/lwc1hr/force-app/main/default/lwc/todoItemComponent/todoItemComponent.html
@@ -1,3 +1,10 @@
 <template>
-    
+
+        <div class={containerClass}>
+            <span class="slds-text-heading_lebel">{todoName}</span>
+            <lightning-button-icon icon-name="utility:check" class="slds-p-horizontal_medium" onclick={updatetodoHandler} title="Update Todo"></lightning-button-icon>
+            <lightning-button-icon icon-name="utility:delete" class="slds-p-horizontal_medium" onclick={deletetodoHandler} title="Delete Todo"></lightning-button-icon>
+        </div>
+       
+
 </template>
